2008-10-02  Christian Persch

        Bug 554701 – filechooser spams console with useless warnings

        * gtk/gtkfilesystem.c.c: Don't warn if the async call was simply
        cancelled.

2008-10-02  Christian Persch

        Bug 554698 – mem leak in filechooser

        * gtk/gtkfilechooserdefault.c: Plug a mem leak.

2008-10-02  Christian Persch

        Bug 554696 – invalid free function used

        * gtk/gtkfilesystemmodel.c: Use the right free func.

2008-10-02  Christian Persch

        Bug 554691 – mem leak in filechooser

        * gtk/gtkfilesystemmodel.c: Plug a mem leak.

2008-10-02  Christian Persch

        Bug 554690 – mem leak in filechooser

        * gtk/gtkfilechooserdefault.c: Plug a mem leak.

2008-10-01  Tor Lillqvist  <tml@novell.com>

	* gtk/gtkscalebutton.c: Don't #define _GNU_SOURCE on Windows as it
	confuses newest mingw headers.

2008-09-29  Richard Hult  <richard@imendio.com>

	Merged from trunk:

	Bug 554141 – uninitialized data use/free in gtkclipboard-quartz.c

	* gtk/gtkclipboard-quartz.c: (gtk_clipboard_wait_for_contents):
	Patch from Jon A. Cruz to initialize the allocated selection data.

2008-09-26  Matthias Clasen  <mclasen@redhat.com>

	Merged from trunk:

	Bug 553211 – GtkFileChooserButton unsets filter after first use

	* gtk/gtkfilechooserdefault.c (show_and_select_files): Also
	get the content-type, since it is used later on.
	Pointed out by Davyd Madeley.

2008-09-26  Matthias Clasen  <mclasen@redhat.com>

	Merged from trunk:

	Bug 553578 - tabs are not drawn correctly

	* gtk/gtknotebook.c: Track the visibility state of notebook tabs
	between allocations so that we know to redraw the tab labels if
	tabs are hidden and shown without changing position.
	Reported by Marek Kašík, patch by Owen Taylor.

2008-09-26  Matthias Clasen  <mclasen@redhat.com>

	Merged from trunk:

	Bug 553133 – GtkFileChooser won't ask to mount a volume

	* gtk/gtkfilechooserdefault.c (shortcuts_activate_volume): Use